<resources>
    <string name="liveupdate_langauge">english</string>
    <string name="liveupdate_language_chinese">chinese</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_activitylog">Activity Log</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_other_app">Other Norton Apps</string>
    <string name="feature_app_advisor">App Advisor</string>
    <string name="feature_backup">Backup</string>
    <string name="feature_call_block">Call Blocking</string>
    <string name="feature_web_protect">Web Protection</string>
    <string name="scan_btn">Scan</string>
    <string name="device_admin">Security Lock</string>
    <string name="help_anti_malware_title">Anti-Malware</string>
    <string name="help_anti_malware">Anti-Malware protects you from mobile threats by scanning for and removing malicious apps.</string>
    <string name="help_grayware_title">App Advisor</string>
    <string name="help_app_advisor_content_1">Get warnings about apps installed on your device with issues like personal information leaks, ads, data transfer and excessive battery consumption.</string>
    <string name="help_app_advisor_content_2">Just enable App Advisor for Google Play in Settings to see this information before you download an app.</string>
    <string name="help_call_blocking_title">Call &amp; SMS Blocking</string>
    <string name="help_call_blocking">Call &amp; SMS Blocking helps guard your privacy from unwanted calls and texts.</string>
    <string name="help_liveupdate_title">LiveUpdate</string>
    <string name="help_liveupdate">LiveUpdate keeps your mobile protection current by automatically checking for new threat definitions and new Norton components.</string>
    <string name="help_lockwipe_title">Anti-Theft</string>
    <string name="help_lockwipe">"If your device is lost or stolen, you have several options for recovering it using text commands or commands from the Norton Mobile Security Website. 

Using texts, you can lock, wipe, and locate your device and you can cause it to make noise. The text message should consist of an action word (lock, wipe, locate, or scream) followed by your passcode."</string>
    <string name="help_admin_lockwipe">"If your device is lost or stolen, your device administrator can do the following: 

 - Remotely lock, wipe, and locate your device
 - Cause the device to make a noise
 - Trigger the device's camera to take a picture of whatever is in front of it"</string>
    <string name="help_web_lockwipe">On the website, you can also lock and locate your device. In addition, you can trigger your device’s camera to take a picture of whoever or whatever is in front of it to help you retrieve it.</string>
    <string name="help_lockwipe_settings">Additional Anti-Theft options are available in Settings.</string>
    <string name="help_web_protection_title">Web Protection</string>
    <string name="help_web_protection">Web Protection detects and warns you about fraudulent websites before you visit them.</string>
    <string name="help_support_title">Support</string>
    <string name="help_support">Click here for support</string>
    <string name="help_device_admin_intro">"We recommend that you turn on Security Lock for Norton Mobile Security to keep your device protected in case it is started in Safe Mode.
 To turn on Security Lock:

 1. On the Norton Mobile Security main screen, tap Menu.
 2. On the Menu screen, tap Settings.
 3. On the Settings screen, tap Security Lock.

 Please note that Security Lock will need to be turned off in order to uninstall Norton Mobile Security."</string>
    <string name="help_battery_saving_title">Battery Saving Mode</string>
    <string name="help_battery_saving_intro">Postpones scheduled LiveUpdate or scans when the battery is low until the battery is charged.</string>
    <string name="help_backup_title">Backup</string>
    <string name="help_backup_content">"Securely back up the contacts on your device online and restore them to this device or any other device that also has Norton Mobile Security installed.
When you restore a backup, you have two choices: Append or Overwrite. Append adds the contacts you don't already have on your device. Overwrite replaces your current contact list with the backed up list."</string>
    <string name="help_policy_title">Privacy Policy</string>
    <string name="help_policy">Please go to:</string>
    <string name="product_policy_link">http://www.norton.mobi/privacy-policy</string>
    <string name="upgrade_title">Upgrade to full version to add:</string>
    <string name="upgrade_sms_at">SMS Scream, Wipe, and Locate</string>
    <string name="upgrade_web_at">Web Lock, Scream, Wipe, Locate, and Sneak Peek</string>
    <string name="upgrade_call_blocking">Call and SMS Blocking</string>
    <string name="upgrade_web_protection">Web Protection</string>
    <string name="upgrade_app_advisor">App Advisor</string>
    <string name="upgrade_anti_malware">Anti-Malware</string>
    <string name="upgrade_devices">Registration for multiple devices</string>
    <string name="update_license">Updating license…</string>
    <string name="have_key">I have already purchased the product</string>
    <string name="skip_trial_and_purchase">Skip trial and purchase premium today</string>
    <string name="trial_upgrade_title">Premium version adds:</string>
    <string name="trial_feature_app_advisor">Warns about bad apps</string>
    <string name="trial_feature_backup">Saves your contact list</string>
    <string name="trial_feature_callblocking">Blocks unwanted calls and texts</string>
    <string name="trial_feature_webprotection">Warns about bad websites</string>
    <string name="trial_layout_decription">One trial per Norton Account</string>
    <string name="btn_upgrade">Get Premium</string>
    <string name="step_number_1">1.</string>
    <string name="step_number_2">2.</string>
    <string name="app_store_analyzer_setup">Set Up</string>
    <string name="app_store_analyzer_intro_1">App Advisor automatically scans Google Play apps before you install them.</string>
    <string name="app_store_analyzer_intro_2">To set up this feature:</string>
    <string name="app_store_analyzer_tutorial_step_1">Tap <b>Set Up</b>" and find
"<b>App Advisor by Norton</b>.</string>
    <string name="app_store_analyzer_tutorial_step_2">Turn <b>ON</b> App Advisor.</string>
    <string name="app_store_analyzer_tutorial_subtext">You can set up later in Settings</string>
    <string name="notify_title_app_advisor_for_google_play">App Advisor for Google Play</string>
</resources>