<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_anti_malware_title" />
            <TextView android:textAppearance="?android:textAppearance" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_anti_malware" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_grayware_title" />
            <TextView android:textAppearance="?android:textAppearance" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_app_advisor_content_1" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_app_advisor_content_2" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_app_advisor_content_2" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_call_blocking_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_call_blocking_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_call_blocking" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_call_blocking" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_backup_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_backup_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_backup_content" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_backup_content" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_liveupdate_title" />
            <TextView android:textAppearance="?android:textAppearance" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_liveupdate" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_lockwipe_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_lockwipe_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_lockwipe" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_lockwipe" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_web_lockwipe" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_web_lockwipe" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_admin_lockwipe" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_admin_lockwipe" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_lockwipe_settings" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_lockwipe_settings" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_device_admin_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/device_admin" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_device_admin" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_device_admin_intro" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_web_protection_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_web_protection_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_web_protection" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_web_protection" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_battery_saving_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_battery_saving_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_battery_saving_intro" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_battery_saving_intro" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_support_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_support_title" />
            <TextView android:textAppearance="?android:textAppearance" android:textColor="@color/link" android:id="@id/help_support" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_support" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/norton_color" android:id="@id/help_policy_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_policy_title" />
            <TextView android:textAppearance="?android:textAppearance" android:id="@id/help_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_policy" />
            <TextView android:textAppearance="?android:textAppearance" android:autoLink="all" android:id="@id/product_policy_link" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/product_policy_link" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>