<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/padding_horizontal" android:paddingRight="@dimen/padding_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/upgrade_content" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/new_upgrade_layout" android:paddingTop="@dimen/padding_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearance" android:textStyle="bold" android:layout_gravity="center" android:id="@id/new_upgrade_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_horizontal" />
                <ImageView android:layout_gravity="center|top" android:id="@id/upgrade_img" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_img_premium" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/premuim_version_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/trial_upgrade_title" />
                <TableLayout android:layout_gravity="center_horizontal" android:id="@id/featuretableLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_small_gap" android:layout_marginTop="@dimen/padding_horizontal" android:layout_marginBottom="@dimen/padding_vertical" android:shrinkColumns="1">
                    <TableRow android:id="@id/row_app_advisor" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/norton_color" android:id="@id/text_feature_app_advisor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feature_app_advisor" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/normal_gray" android:id="@id/text_app_advisor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/trial_feature_app_advisor" />
                    </TableRow>
                    <TableRow android:id="@id/row_backup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small_gap">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/norton_color" android:id="@id/text_feature_backup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feature_backup" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/normal_gray" android:id="@id/text_backup_new" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/trial_feature_backup" />
                    </TableRow>
                    <TableRow android:id="@id/row_call_block" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small_gap">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/norton_color" android:id="@id/text_feature_call_block" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feature_call_block" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/normal_gray" android:id="@id/text_call_block_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/trial_feature_callblocking" />
                    </TableRow>
                    <TableRow android:id="@id/row_web_protect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small_gap">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/norton_color" android:id="@id/text_feature_web_protection" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feature_web_protect" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/normal_gray" android:id="@id/text_web_protection_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/trial_feature_webprotection" />
                    </TableRow>
                </TableLayout>
                <TextView android:textSize="12.0sp" android:textColor="@color/normal_gray" android:layout_gravity="center" android:id="@id/detail_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trial_layout_decription" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/old_upgrade_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:layout_gravity="center" android:id="@id/upgrade_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_title" />
                <ImageView android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_sms_at" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/upgrade_sms_at" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_web_at" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/upgrade_web_at" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_call_block" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_call_blocking" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_web_protection" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_web_protection" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_apps_advisor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_app_advisor" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_anti_malware" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_anti_malware" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/text_backup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/feature_backup" android:drawableLeft="@drawable/ic_status_ok" />
                <TextView android:textAppearance="?android:textAppearance" android:id="@id/register_multidevice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upgrade_devices" android:drawableLeft="@drawable/ic_status_ok" />
            </LinearLayout>
            <Button android:layout_gravity="center_horizontal" android:id="@id/upgrade" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small_gap" android:text="@string/btn_upgrade" />
            <TextView android:textAppearance="?android:textAppearance" android:textColor="@color/blue" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/purchase" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="5.0dip" android:text="@string/skip_trial_and_purchase" />
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearance" android:textColor="@color/blue" android:gravity="center" android:layout_gravity="center" android:id="@id/enter_key_link" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/have_key" />
        <LinearLayout android:orientation="vertical" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <TextView android:textAppearance="?android:textAppearance" android:layout_gravity="center" android:id="@id/progress_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_license" />
            <ProgressBar android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding_small_gap" android:max="100" android:indeterminate="true" style="?android:attr/progressBarStyleHorizontal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>