<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/TopShadowOverlay">
        <ImageView android:layout_gravity="right" android:id="@id/app_store_analyzer_tutorial_close" android:clickable="true" android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/close_x" android:scaleType="fitCenter" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/norton_color" android:gravity="center" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notify_title_app_advisor_for_google_play" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_subheader" android:gravity="center" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/app_store_analyzer_intro_1" />
        <TextView android:textSize="14.0sp" android:textColor="@color/darkgray" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/app_store_analyzer_intro_2" />
        <View android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="26.0dip" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="240.0dip" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/step_number_1" style="@style/appStoreAnalyzerTutorialText" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/app_store_analyzer_tutorial_step_1" style="@style/appStoreAnalyzerTutorialText" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/step_number_2" style="@style/appStoreAnalyzerTutorialText" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/app_store_analyzer_tutorial_step_2" style="@style/appStoreAnalyzerTutorialText" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="26.0dip" android:layout_marginBottom="15.0dip" />
        <TextView android:textSize="22.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/app_store_analyzer_setup_button" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_store_analyzer_setup" />
        <TextView android:textColor="@color/light_gray" android:gravity="center_horizontal" android:id="@id/setup_later_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/app_store_analyzer_tutorial_subtext" />
    </LinearLayout>
</ScrollView>